# fastapi_zero

./: .gitignore  database.db  pyproject.toml
fastapi_zero/: app.py  settings.py
migrations/versions/: 0252c7b9b402_add_updated_at_to_users_table.py  06287c693d0e_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
